<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AerogearPushTest</string>
    <string name="main_pushServer_hint">Push server (e.g. http://localhost:8080/ag-push/rest/registry/device)</string>
    <string name="main_variantId_hint">Variant id (from push server)</string>
    <string name="main_senderId_hint">Sender id (from Google)</string>
    <string name="main_alias_hint">Alias (e.g. user\'s email)</string>
    <string name="main_secret_hint">Secret (from push server)</string>
    <string name="main_preloadUrl_hint">Preload fields from url (JSON)</string>
    <string name="main_preload">Load</string>
    <string name="main_register">Register</string>
    <string name="main_unregister">Unregister</string>
    <string name="main_appendOutput">Append new messages</string>
    <string name="main_output_text">No new messaged yet delivered.</string>
    <string name="performance_output_text">No new messages yet delivered.</string>
    <string name="performance_stats">Stats</string>
    <string name="performance_reset">Reset stats</string>

</resources>